--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Garage to Galaxy</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <title>🚗 Garage to Galaxy 🌌</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>🚗 Garage to Galaxy 🌌</h1>
-  <canvas id="gameCanvas"></canvas>
-  <script src="main.js"></script>
+    <h1>🚀 Garage to Galaxy: Coming Soon!</h1>
+    <canvas id="gameCanvas"></canvas>
+    <script src="main.js"></script>
 </body>
 </html>
